# demo-aqlm-rs

./: .gitignore  Cargo.toml  README.md
cmd/wasm/: Cargo.toml  index.html  index.js  linear_worker.js  vite.config.js  worker.js
cmd/wasm/src/: api.rs  lib.rs  loader.rs  log.rs
src/core/generator/: Cargo.toml
src/core/generator/src/: lib.rs
src/core/nn/: Cargo.toml
src/core/nn/src/: attention.rs  cache.rs  embedding.rs  functional.rs  layernorm.rs  lib.rs  linear.rs  linear_aqlm.rs  linear_int8.rs  llama.rs  llama_block.rs  llama_config.rs  matrix_int8.rs  mlp.rs
src/core/state_dict/: Cargo.toml
src/core/state_dict/src/: from_state_dict.rs  lib.rs  owned_tensor.rs  state_dict.rs
src/core/tensorlib/: Cargo.toml
src/core/tensorlib/src/: binary_operations.rs  functional.rs  lib.rs  matmul.rs  matrix.rs  rows.rs  sample.rs  scalar_operations.rs  transpose.rs
src/tokenizer/: Cargo.toml
src/tokenizer/src/: lib.rs
src/worker_engine/: Cargo.toml
src/worker_engine/src/: calib.rs  handles.rs  lib.rs  matrix_serde.rs  parallel_aqlm.rs  parallel_int8.rs  registry.rs  registry_rpc.rs  registry_rpc_handle.rs
