[package]
name = "wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "Document", "Element"] }
js-sys = "0.3.70"
safetensors = {git = "https://github.com/huggingface/safetensors", rev = "123adbc2524375cc9c7ff3b1d3cce4fe03c28477"}
half = "2.4.1"
state_dict = { path = "../../src/core/state_dict" }
worker_engine = {path = "../../src/worker_engine"}
nn = {path = "../../src/core/nn" }
tensorlib = {path = "../../src/core/tensorlib" }
generator = {path = "../../src/core/generator" }
tokenizer = {path = "../../src/tokenizer"}
ehttp = {git = "https://github.com/emilk/ehttp.git", rev="a598e64d956b16d25a73fcc628865b952d664665"}
tokio = { version = "1.39.3", features = ["sync", "macros"] }
console_error_panic_hook = "0.1.7"
log = "0.4.22"
console_log = "1.0.0"
slog = "2.7.0"
web-time = "1.1.0"
futures = "0.3.30"
serde = "1.0.210"
serde_json = "1.0.128"
anyhow = "1.0.87"
