[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tensorlib = {path = "../tensorlib" }
state_dict = {path = "../state_dict" }
nn = {path = "../nn" }
tiktoken-rs = "0.5.9"
anyhow = "1.0.86"
base64 = "0.22.1"
rustc-hash = "1.1.0"
serde = "1.0.210"
log = "0.4.22"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.9.0-alpha.2"
web-time = "1.1.0"
